--- a/hidex.html
+++ b/hidex.html
@@ -17,7 +17,7 @@
             min-height: 100vh;
         }
         .container {
-            width: 80%;
+            width: 90%;
             max-width: 1200px;
         }
         .main-card {
@@ -30,9 +30,12 @@
         }
         .main-card img {
             width: 50%;
+            height: 350px;
+            border-radius: 10px;
             object-fit: cover;
         }
         .content {
+            width: 50%;
             padding: 20px;
         }
         .tag {
@@ -60,15 +63,17 @@
             gap: 20px;
         }
         .card {
+            width: 50%;
+            display: flex;
             background: #fff;
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            flex: 1;
         }
         .card img {
-            width: 100%;
-            height: 300px;
+            width: 60%;
+            height: 250px;
+            border-radius: 10px;
             object-fit: cover;
         }
         .card h3 {
@@ -85,7 +90,7 @@
 <body>
     <div class="container">
         <div class="main-card">
-            <img src="./pexels-andres-ordaz-vega-227887908-12854640.jpg" height="350" width="150" alt="user img">
+            <img src="./pexels-andres-ordaz-vega-227887908-12854640.jpg" alt="user img">
             <div class="content">
                 <span class="tag lifestyle">Lifestyle</span>
                 <h2>Start here to receive a concise summary covering all the key elements of innovative architectural
@@ -101,33 +106,20 @@
         </div>
         <div class="sub-cards">
             <div class="card">
-                <img src="./pexels-bradleyhook-123335.jpg" height="150" width="200" alt="Tech Image">
-                <span class="tag technology">Technology</span>
-                <h3>Architects use innovative designs to create vast interior spaces that feel open and grand.
-                     Strategies include open floor plans, high ceilings, and large glass facades that invite natural light.
-                      Mezzanines and suspended walkways add depth, while retractable walls allow flexibility.
-                       Cantilevered structures create floating effects, and biomorphic designs blend nature with function.
-                        Smart materials like lightweight steel and tensile fabrics enable expansive areas without bulky supports.
-                         Atriums, skylights, and mirrored surfaces enhance spaciousness.
-                          Curved walls and organic shapes break rigidity, promoting fluidity.
-                           Vertical gardens bring life inside, while multi-level spaces optimize usage.
-                            These innovations redefine vast, immersive interiors.</h3>
-                <div class="author">By Single_B &bull; march,1,2025</div>
+                <img src="./pexels-bradleyhook-123335.jpg" alt="Tech Image">
+                <div class="content"> 
+                    <span class="tag technology">Technology</span>
+                    <h3>Architects use innovative designs to create vast interior spaces that feel open and grand.</h3>
+                    <div class="author">By Single_B &bull; march,1,2025</div>
+                </div>
             </div>
             <div class="card">
-                <img src="./pexels-jess-vide-6389728.jpg" height="200" width="150" alt="Travel Image">
-                <span class="tag travel">Travel</span>
-                <h3>A traveler ventures into a breathtaking ice cave,
-                    surrounded by shimmering blue walls that glow like frozen crystals.
-                     The cave’s ceiling glistens as sunlight filters through the translucent ice,
-                     creating a mesmerizing, otherworldly effect. Stalactites of ice hang gracefully,
-                      while the frozen floor reflects the stunning formations above. Outside,
-                       snow-covered mountains and towering glaciers add to the awe-inspiring scenery.
-                        The crisp, fresh air and the quiet stillness enhance the magical experience.
-                         Every step deeper into the cave reveals nature’s artistry,
-                          making it an unforgettable journey. The traveler stands in awe,
-                           immersed in the raw, untouched beauty of the icy wonderland.</h3>
-                <div class="author">By Single_B &bull; march,1,2025</div>
+                <img src="./pexels-jess-vide-6389728.jpg" alt="Travel Image">
+                <div class="content">
+                    <span class="tag travel">Travel</span>
+                    <h3>A traveler ventures into a breathtaking ice cave.</h3>
+                    <div class="author">By Single_B &bull; march,1,2025</div>
+                </div>
             </div>
         </div>
     </div>
